content/_generated-doc/3.8/config/quarkus-restclient-config-general-config-items.adoc

:summaryTableId: quarkus-restclient-config-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-restclient-config-general-config-items_configuration]]link:#quarkus-restclient-config-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-logging-scope]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-logging-scope[quarkus.rest-client.logging.scope]`


[.description]
--
Scope of logging for the client.  +
WARNING: beware of logging sensitive data  +
The possible values are:

 - `request-response` - enables logging request and responses, including redirect responses
 - `all` - enables logging requests and responses and lower-level logging
 - `none` - no additional logging  This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_LOGGING_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_LOGGING_SCOPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-logging-body-limit]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-logging-body-limit[quarkus.rest-client.logging.body-limit]`


[.description]
--
How many characters of the body should be logged. Message body can be large and can easily pollute the logs.

By default, set to 100.

This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_LOGGING_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_LOGGING_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a|icon:lock[title=Fixed at build time] [[quarkus-restclient-config-general-config-items_quarkus-rest-client-configs-scope]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-configs-scope[quarkus.rest-client."configs".scope]`


[.description]
--
The CDI scope to use for injection. This property can contain either a fully qualified class name of a CDI scope annotation (such as "jakarta.enterprise.context.ApplicationScoped") or its simple name (such as "ApplicationScoped"). By default, this is not set which means the interface is not registered as a bean unless it is annotated with `RegisterRestClient`. If an interface is not annotated with `RegisterRestClient` and this property is set, then Quarkus will make the interface a bean of the configured scope.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIGS__SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIGS__SCOPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-url]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-url[quarkus.rest-client."config-key".url]`


[.description]
--
The base URL to use for this service. This property or the `uri` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-uri]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-uri[quarkus.rest-client."config-key".uri]`


[.description]
--
The base URI to use for this service. This property or the `url` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-providers]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-providers[quarkus.rest-client."config-key".providers]`


[.description]
--
Map where keys are fully-qualified provider classnames to include in the client, and values are their integer priorities. The equivalent of the `@RegisterProvider` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROVIDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROVIDERS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-connect-timeout]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-connect-timeout[quarkus.rest-client."config-key".connect-timeout]`


[.description]
--
Timeout specified in milliseconds to wait to connect to the remote endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-read-timeout]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-read-timeout[quarkus.rest-client."config-key".read-timeout]`


[.description]
--
Timeout specified in milliseconds to wait for a response from the remote endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-follow-redirects]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-follow-redirects[quarkus.rest-client."config-key".follow-redirects]`


[.description]
--
A boolean value used to determine whether the client should follow HTTP redirect responses.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__FOLLOW_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__FOLLOW_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-multipart-post-encoder-mode]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-multipart-post-encoder-mode[quarkus.rest-client."config-key".multipart-post-encoder-mode]`


[.description]
--
Mode in which the form data are encoded. Possible values are `HTML5`, `RFC1738` and `RFC3986`. The modes are described in the link:https://netty.io/4.1/api/io/netty/handler/codec/http/multipart/HttpPostRequestEncoder.EncoderMode.html[Netty documentation]

By default, Rest Client Reactive uses RFC1738.

This property is not applicable to the RESTEasy Client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__MULTIPART_POST_ENCODER_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__MULTIPART_POST_ENCODER_MODE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-proxy-address]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-proxy-address[quarkus.rest-client."config-key".proxy-address]`


[.description]
--
A string value in the form of `:` that specifies the HTTP proxy server hostname (or IP address) and port for requests of this client to use. Use `none` to disable proxy

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-proxy-user]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-proxy-user[quarkus.rest-client."config-key".proxy-user]`


[.description]
--
Proxy username. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_USER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_USER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-proxy-password]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-proxy-password[quarkus.rest-client."config-key".proxy-password]`


[.description]
--
Proxy password. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-non-proxy-hosts]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-non-proxy-hosts[quarkus.rest-client."config-key".non-proxy-hosts]`


[.description]
--
Hosts to access without proxy This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-query-param-style]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-query-param-style[quarkus.rest-client."config-key".query-param-style]`


[.description]
--
An enumerated type string value with possible values of "MULTI_PAIRS" (default), "COMMA_SEPARATED", or "ARRAY_PAIRS" that specifies the format in which multiple values for the same query parameter is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__QUERY_PARAM_STYLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__QUERY_PARAM_STYLE+++`
endif::add-copy-button-to-env-var[]
-- a|
`multi-pairs`, `comma-separated`, `array-pairs` 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-verify-host]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-verify-host[quarkus.rest-client."config-key".verify-host]`


[.description]
--
Set whether hostname verification is enabled. Default is enabled. This setting should not be disabled in production as it makes the client vulnerable to MITM attacks.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__VERIFY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__VERIFY_HOST+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-trust-store]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-trust-store[quarkus.rest-client."config-key".trust-store]`


[.description]
--
The trust store location. Can point to either a classpath resource or a file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-trust-store-password]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-trust-store-password[quarkus.rest-client."config-key".trust-store-password]`


[.description]
--
The trust store password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-trust-store-type]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-trust-store-type[quarkus.rest-client."config-key".trust-store-type]`


[.description]
--
The type of the trust store. Defaults to "JKS".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-key-store]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-key-store[quarkus.rest-client."config-key".key-store]`


[.description]
--
The key store location. Can point to either a classpath resource or a file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-key-store-password]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-key-store-password[quarkus.rest-client."config-key".key-store-password]`


[.description]
--
The key store password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-key-store-type]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-key-store-type[quarkus.rest-client."config-key".key-store-type]`


[.description]
--
The type of the key store. Defaults to "JKS".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-hostname-verifier]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-hostname-verifier[quarkus.rest-client."config-key".hostname-verifier]`


[.description]
--
The class name of the host name verifier. The class must have a public no-argument constructor.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__HOSTNAME_VERIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__HOSTNAME_VERIFIER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-connection-ttl]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-connection-ttl[quarkus.rest-client."config-key".connection-ttl]`


[.description]
--
The time in ms for which a connection remains unused in the connection pool before being evicted and closed. A timeout of `0` means there is no timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_TTL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_TTL+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-connection-pool-size]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-connection-pool-size[quarkus.rest-client."config-key".connection-pool-size]`


[.description]
--
The size of the connection pool for this client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-keep-alive-enabled]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-keep-alive-enabled[quarkus.rest-client."config-key".keep-alive-enabled]`


[.description]
--
If set to false disables the keep alive completely.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEEP_ALIVE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEEP_ALIVE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-max-redirects]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-max-redirects[quarkus.rest-client."config-key".max-redirects]`


[.description]
--
The maximum number of redirection a request can follow. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__MAX_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__MAX_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-headers-headers]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-headers-headers[quarkus.rest-client."config-key".headers]`


[.description]
--
The HTTP headers that should be applied to all requests of the rest client. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__HEADERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-shared]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-shared[quarkus.rest-client."config-key".shared]`


[.description]
--
Set to true to share the HTTP client between REST clients. There can be multiple shared clients distinguished by _name_, when no specific name is set, the name `__vertx.DEFAULT` is used. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-name]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-name[quarkus.rest-client."config-key".name]`


[.description]
--
Set the HTTP client name, used when the client is shared, otherwise ignored. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-user-agent]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-user-agent[quarkus.rest-client."config-key".user-agent]`


[.description]
--
Configure the HTTP user-agent header to use. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__USER_AGENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__USER_AGENT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-http2]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-http2[quarkus.rest-client."config-key".http2]`


[.description]
--
If this is true then HTTP/2 will be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__HTTP2+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__HTTP2+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-max-chunk-size]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-max-chunk-size[quarkus.rest-client."config-key".max-chunk-size]`


[.description]
--
The max HTTP chunk size (8096 bytes by default).

This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__MAX_CHUNK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__MAX_CHUNK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[title=More information about the MemorySize format]]
|`8K`


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-alpn]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-alpn[quarkus.rest-client."config-key".alpn]`


[.description]
--
If the Application-Layer Protocol Negotiation is enabled, the client will negotiate which protocol to use over the protocols exposed by the server. By default, it will try to use HTTP/2 first and if it's not enabled, it will use HTTP/1.1. When the property `http2` is enabled, this flag will be automatically enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-capture-stacktrace]]`link:#quarkus-restclient-config-general-config-items_quarkus-rest-client-config-key-capture-stacktrace[quarkus.rest-client."config-key".capture-stacktrace]`


[.description]
--
If `true`, the stacktrace of the invocation of the REST Client method is captured. This stacktrace will be used if the invocation throws an exception

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CAPTURE_STACKTRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CAPTURE_STACKTRACE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
